Minor changes in anchors to improve readability

--- a/bedrock/styleguide/templates/styleguide/communications/copy-rules.html
+++ b/bedrock/styleguide/templates/styleguide/communications/copy-rules.html
@@ -56,7 +56,7 @@
     <dd>make sure to clearly specify whether you are talking about the Firefox family of products or one of those products (i.e. the Firefox browser) specifically; always capitalized unless appearing as part of a URL</dd>
     <dt id="firefox-accounts">Firefox Accounts</dt>
     <dd>accounts is capitalized when it follows Firefox, lowercase when on its own; it can be singular or plural as needed and is always localized</dd>
-    <dt id="firefoxadd-ons">Firefox Add-ons</dt>
+    <dt id="firefox-add-ons">Firefox Add-ons</dt>
     <dd>add-ons is capitalized when it follows Firefox, lowercase when on its own, though the O is always lowercase; it can be singular or plural as needed and is always localized</dd>
     <dt id="firefox-beta">Firefox Beta</dt>
     <dd>Firefox Beta on first mention, Beta on subsequent mentions, always capitalized</dd>
@@ -88,7 +88,7 @@
     <dd>for internal usage, this is the official abbreviation of “Firefox OS,” but it should not be used in any external communications</dd>
     <dt id="gear">gear</dt>
     <dd>used to refer to any branded merchandise, be it Mozilla, Firefox or any of our other brands; please use instead of “swag” or “merchandise”</dd>
-    <dt id="http://">http://</dt>
+    <dt id="http">http://</dt>
     <dd>this should never appear before a URL in communications unless there is a very good reason (though we can’t think of one off the tops of our heads)</dd>
     <dt id="i18n">i18n</dt>
     <dd>our abbreviation for internationalization (18 letters between the I and N), reserved for internal use or where space is a consideration, otherwise please avoid or explain on first use</dd>
@@ -100,7 +100,7 @@
     <dd>our abbreviation for localization (10 letters between the L and N), reserved for internal use or where space is a consideration, otherwise please avoid or explain on first use</dd>
     <dt id="left-click">left-click</dt>
     <dd>hyphenated in all forms and uses</dd>
-    <dt id="merch/merchandise">merch/merchandise</dt>
+    <dt id="merchandise">merch/merchandise</dt>
     <dd>please use “gear” to refer to branded merchandise</dd>
     <dt id="mobile">mobile</dt>
     <dd>lowercase, even if it follows Firefox; see also “Firefox for mobile”</dd>
@@ -112,7 +112,7 @@
     <dd>redundant, do not use</dd>
     <dt id="moz">Moz</dt>
     <dd>we do not generally abbreviate the Mozilla name, unless otherwise noted in this guide; please avoid</dd>
-    <dt id="mozcamp/mozcamps">MozCamp/MozCamps</dt>
+    <dt id="mozcamp">MozCamp/MozCamps</dt>
     <dd>regional gatherings of volunteer and paid staff that happen several times a year around the world (MozCamp Asia, MozCamp LatAm, etc.); note the capitalization</dd>
     <dt id="mozilla">Mozilla</dt>
     <dd>make  sure Mozilla is well established early or prominently in any writing or  communications (Tabzilla satisfies this requirement, for example),  either as part of a product name (Mozilla Firefox, Mozilla Webmaker,  etc.) or on its own, but do not use any compound constructions (like  Mozilla Firefox Marketplace); even  though the Mozilla wordmark is lowercase, Mozilla should be capitalized  in all other uses, unless as part of a URL (mozilla.org)</dd>
@@ -120,19 +120,19 @@
     <dd>though the Mozilla Labs wordmark is lowercase, always capitalize both words in regular text; Mozilla Labs on first mention, Labs on subsequent mentions</dd>
     <dt id="mozilla-reps">Mozilla Reps</dt>
     <dd>always two words, always capitalized</dd>
-    <dt id="mozilla-space/spaces">Mozilla Space/Spaces</dt>
+    <dt id="mozilla-space">Mozilla Space/Spaces</dt>
     <dd>official terms for a specific group of Mozilla offices around the world, which include open space for the community; current locations or those in the works include San Francisco, Toronto, London, Berlin, Tokyo, Auckland, Beijing, Paris and Vancouver</dd>
     <dt id="mozilla-webmaker">Mozilla Webmaker</dt>
     <dd>Mozilla Webmaker on first mention, Webmaker on subsequent mentions, always capitalized</dd>
     <dt id="mozillians">Mozillians</dt>
     <dd>refers to paid or volunteer staff of the Mozilla project;  always uppercase unless part of a URL (mozillians.org)</dd>
-    <dt id="mozspace/mozspaces">MozSpace/MozSpaces</dt>
+    <dt id="mozspace">MozSpace/MozSpaces</dt>
     <dd>informal terms for Mozilla Spaces reserved for internal use; do not use in any communications</dd>
     <dt id="non-profit">non-profit</dt>
     <dd>though “nonprofit” is not incorrect, we prefer to use the hyphenated form</dd>
     <dt id="numbers"> numbers</dt>
     <dd>spell out as words from one to nine, use numerals 10 and up; spell out large numbers like thousand, million, etc. (see also “version numbers”)</dd>
-    <dt id="open/open-web">open/open Web</dt>
+    <dt id="open-web">open/open Web</dt>
     <dd>as the Web is open by its very nature, there is no need to make the distinction; not a forbidden term, but avoid where possible; when specifically and intentionally referring to the <a href=”http://en.wikipedia.org/wiki/Open_Web”>Open Web movement</a>, please capitalize</dd>
     <dt id="pancake">Pancake</dt>
     <dd>uppercase when referring to the tablet browsing experiment, lowercase when referring to the delicious breakfast food</dd>
@@ -144,7 +144,7 @@
     <dd>see “mobile phone”</dd>
     <dt id="possessives">possessives</dt>
     <dd>though you may run into cases where it’s impossible, please avoid using possessives with our brands or product names where you can; see also “plurals”</dd>
-    <dt id="plugin/plugins">plugin/plugins</dt>
+    <dt id="plugins">plugin/plugins</dt>
     <dd>unless you're talking about physically plugging something in, this should be one word, lowercase, when referring to things like Flash and QuickTime</dd>
     <dt id="plurals">plurals</dt>
     <dd>as with possessives, it is preferable not to pluralize our brands or product names; try to reword if you can</dd>
@@ -172,7 +172,7 @@
     <dd>see “Firefox Themes”</dd>
     <dt id="thunderbird">Thunderbird</dt>
     <dd>capitalized unless appearing as part of a URL</dd>
-    <dt id="thunderbirdbeta">Thunderbird Beta</dt>
+    <dt id="thunderbird-beta">Thunderbird Beta</dt>
     <dd>Thunderbird Beta on first mention, Beta on subsequent mentions (but only if it’s absolutely which product you’re referring to), always capitalized</dd>
     <dt id="thunderbird-daily">Thunderbird Daily</dt>
     <dd>Thunderbird Daily on first mention, Daily on subsequent mentions, always capitalized</dd>
