modified logo build, logo dependencies and updated some js build names

--- a/bedrock/mozorg/templates/mozorg/home/home-new.html
+++ b/bedrock/mozorg/templates/mozorg/home/home-new.html
@@ -35,7 +35,7 @@
     {{ js('home-2015-ie9') }}
   <![endif]-->
   {{ js('home-2015') }}
-  {{ js('mozilla-logo-embed') }}
+  {{ js('mozilla-logo-embed-snippet') }}
 {% endblock %}
 
 {% block string_data %}
