Bug 1128726. Add 2 new firstrun tests, each with 2 variants.

--- a/bedrock/firefox/templates/firefox/australis/tour-base.html
+++ b/bedrock/firefox/templates/firefox/australis/tour-base.html
@@ -23,8 +23,6 @@ data-next="{{ _('Next') }}"
 data-start="{{ _('Let’s go') }}"
 {# L10n: This is the label for a button that delays starting the tour #}
 data-later="{{ _('Not now') }}"
-{# L10n: This is the text for a door-hanger menu that shows in the browser chrome #}
-data-text="{{ _('It’s the fastest, most flexible Firefox ever.') }}"
 {# L10n: This is the text for a call to action that appears in the web page #}
 data-later-cta="{{ _('Take the tour to see what’s new') }}"
 {# L10n: This is the label that represents tour step one of four #}
@@ -37,6 +35,9 @@ data-step3="{{ _('3/4') }}"
 data-step4="{{ _('4/4') }}"
 {# This data attribute is just for testing purposes and should not be localized #}
 data-has-tour="True"
+{# L10n: This is the text for a door-hanger menu that shows in the browser chrome #}
+{% block doorhanger_text %}data-text="{{ _('It’s the fastest, most flexible Firefox ever.') }}"{% endblock %}
+
 {% block doorhanger_title %}{% endblock %}
 {% endblock %}
 
@@ -65,6 +66,9 @@ data-has-tour="True"
   </article>
   {% block tour_content %}{% endblock %}
   {% block tour_mask %}{% endblock %}
+
+  {# used for firstrun tests #}
+  {% block secondary_content %}{% endblock %}
 {% endblock %}
 
 {% block site_footer %}{% endblock %}
