Bug 1128957 - Fix block parsing errors in jinja templates
- replace {%endblock%} by {% endblock %}
- fix a bug in nightly firefox firstrun page which didn't have a date set for the promo_locale l10n block

The issues above were causing parsing errors of templates when using the './manage.py l10n_check' command

- remove empty <p>{{ _('') }}</p> (no visual impact on the page after removing it)
This issue was causing a warning in the logs:
"warning: Empty msgid.  It is reserved by GNU gettext: gettext("") returns the header entry with meta information, not the empty string."

Note that a copuple of trailing spaces in the templates were removed

--- a/bedrock/firefox/templates/firefox/nightly_firstrun.html
+++ b/bedrock/firefox/templates/firefox/nightly_firstrun.html
@@ -75,7 +75,7 @@
     {% if l10n_has_tag('promo_locale') %}
     {# The following block is entirely defined by locales, and the placeholder in en-US here will never be exposed to production #}
       <div class="blue-box l10n">
-        {% l10n promo_locale %}
+        {% l10n promo_locale 20150101 %}
           <h3>Learn more about your local Mozilla community</h3>
           <ul class="unstyled">
             <li><a href="http://www.example.com">Meet our community</a></li>
