--- a/bedrock/foundation/templates/foundation/trademarks/list.html
+++ b/bedrock/foundation/templates/foundation/trademarks/list.html
@@ -75,11 +75,11 @@
       <th>{{ _('Campus Reps logo') }}&trade;</th>
     </tr>
     <tr>
-      <td><img width="100" height="100" alt="{{ _('Rust logo') }}™" src="{{ media('/img/trademarks/rust-logo.png') }}" /></td>
+      <td><img width="100" height="100" alt="{{ _('Rust logo') }}™" src="{{ static('img/trademarks/rust-logo.png') }}" /></td>
       <th>{{ _('Rust logo') }}&trade;</th>
     </tr>
     <tr>
-      <td><img width="100" height="100" alt="{{ _('Cargo logo') }}™" src="{{ media('/img/trademarks/cargo-logo.png') }}" /></td>
+      <td><img width="100" height="100" alt="{{ _('Cargo logo') }}™" src="{{ static('img/trademarks/cargo-logo.png') }}" /></td>
       <th>{{ _('Cargo logo') }}&trade;</th>
     </tr>
   </table>
