--- a/bedrock/foundation/templates/foundation/trademarks/list.html
+++ b/bedrock/foundation/templates/foundation/trademarks/list.html
@@ -74,6 +74,14 @@
       <td><img width="100" height="100" alt="{{ _('Campus Reps logo') }}™" src="{{ media('/img/trademarks/campusreps-logo.png') }}" /></td>
       <th>{{ _('Campus Reps logo') }}&trade;</th>
     </tr>
+    <tr>
+      <td><img width="100" height="100" alt="{{ _('Rust logo') }}™" src="{{ media('/img/trademarks/rust-logo.png') }}" /></td>
+      <th>{{ _('Rust logo') }}&trade;</th>
+    </tr>
+    <tr>
+      <td><img width="100" height="100" alt="{{ _('Cargo logo') }}™" src="{{ media('/img/trademarks/cargo-logo.png') }}" /></td>
+      <th>{{ _('Cargo logo') }}&trade;</th>
+    </tr>
   </table>
 
   <table id="marks">
