--- a/media/css/mozorg/home/home-promo.less
+++ b/media/css/mozorg/home/home-promo.less
@@ -756,10 +756,10 @@ html[lang|="en"] {
 }
 
 /****************************************************************************/
-// Advocacy
-.promo-small-landscape.advocacy {
+// Net Neutrality
+.promo-small-landscape.net-neutrality {
     background-color: #3fa9f1;
-    background-image: url(/media/img/home/voices/promos/advocacy/advocacy-logo.png);
+    background-image: url(/media/img/home/voices/promos/net-neutrality/net-neutrality-date.svg);
     background-position: 15px 20px;
     background-repeat: no-repeat;
     .background-size(100px, 100px);
@@ -771,7 +771,7 @@ html[lang|="en"] {
 }
 
 [lang|='en'] {
-    .promo-small-landscape.advocacy h2 {
+    .promo-small-landscape.net-neutrality h2 {
         .font-size(22px);
     }
 }
@@ -1698,12 +1698,6 @@ html[lang|="en"] {
     .promo-small-landscape.privacy {
         background-image: url(/media/img/home/voices/promos/privacy/privacy-high-res.png);
         .background-size(121px, 120px);
-    }
-
-    // Advocacy
-    .promo-small-landscape.advocacy {
-        background-image: url(/media/img/home/voices/promos/advocacy/advocacy-logo-high-res.png);
-        .background-size(100px, 100px);
     }
 
     // Volunteer
