updated sumo link to be locale-neutral
new link: https://support.mozilla.org/kb/private-browsing-browse-web-without-saving-info

--- a/bedrock/firefox/templates/firefox/dnt.html
+++ b/bedrock/firefox/templates/firefox/dnt.html
@@ -183,7 +183,7 @@
   <div data-accordion-role="tabpanel">{{ _('Other interesting work about Do Not Track and online privacy:') }}
     <ul style='list-style-position:inside'>
       <li>
-        {{ _('<a href="%s">Private browsing</a> in Firefox &#8212; limits saving data about which sites and pages you have visited online')|format('https://support.mozilla.org/en-US/kb/Private%20Browsing') }}
+        {{ _('<a href="%s">Private browsing</a> in Firefox &#8212; limits saving data about which sites and pages you have visited online')|format('https://support.mozilla.org/kb/private-browsing-browse-web-without-saving-info') }}
       </li>
       <li>
       {% trans url1='https://support.mozilla.org/kb/Enabling%20and%20disabling%20cookies',
