--- a/bedrock/firefox/templates/firefox/tiles.html
+++ b/bedrock/firefox/templates/firefox/tiles.html
@@ -14,8 +14,14 @@
    3. Breadcrumbs ("Home > Title")
    3. Page title (large headline)
 #}
-{% block page_title %}{{ _('A Brand New Tiles Experience') }}{% endblock %}
 
+{% block page_title -%}
+{% if LANG in ['en-US'] %}{# Bug 1124724, The new copy is only for en-US at this moment #}
+Our New Tab Experience
+{%- else -%}{# Keep the old copy for l10n #}
+{{ _('A Brand New Tiles Experience') }}
+{%- endif -%}
+{%- endblock %}
 
 {# The contents of the dashboard_intro block appears at the top of the page
    below the page title. Paragraphs should be wrapped like this:
@@ -31,42 +37,93 @@
 #}
 {% block dashboard_intro %}
 
-<p>{{ _('With Enhanced Tiles and Directory Tiles, Firefox provides users easy access to interesting, relevant content, whether it’s the sites they visit most or new sites for them to discover.') }}</p>
+<p>
+{% if LANG in ['en-US'] %}
+The Firefox new tab page now includes Tiles, providing users easy access to interesting, relevant content, whether it’s the sites they visit most or new sites for them to discover.
+{% else %}
+{{ _('With Enhanced Tiles and Directory Tiles, Firefox provides users easy access to interesting, relevant content, whether it’s the sites they visit most or new sites for them to discover.') }}
+{% endif %}
+</p>
 
 <h3>{{ _('What are Tiles?') }}</h3>
 
 <p>
+{% if LANG in ['en-US'] %}
+When you open a new tab in Firefox, you see several rectangles that link to different websites.
+Others call them squares, windows or bookmarks; we call them Tiles.
+{% else %}
 {{ _('When you open a new tab in Firefox, you see several rectangles that link to different websites.') }}
 {{ _('Some people call them squares, windows or bookmarks; we call them Tiles.') }}
+{% endif %}
 </p>
 
 <h3>{{ _('What are Enhanced Tiles?') }}</h3>
 
 <p>
+{% if LANG in ['en-US'] %}
+Enhanced Tiles customize a Firefox user’s new tab page, making it unique to that user.
+Firefox will display Tiles based on a user’s browsing history, and the experience is easy to customize and organize with a simple, drag-and-drop interface.
+Enhanced Tiles replace the default screenshot with a better image — they are only displayed for participating sites that the user has visited in the past.
+{% else %}
 {{ _('Existing Firefox users will be offered a set of Enhanced Tiles based on their browsing history.') }}
 {{ _('The Enhanced versions replace the default screenshot with a better image and are displayed only for sites that the user has visited.') }}
 {{ _('The improved image is supplied by the site or partner and can include a logo plus a rollover image.') }}
 {{ _('If you frequent Amazon.com, for example, you might see the Amazon logo or icon, instead of a screenshot.') }}
+{% endif %}
 </p>
 
 <h3>{{ _('What are Directory Tiles?') }}</h3>
 
 <p>
+{% if LANG in ['en-US'] %}
+For new users, the new tab page in Firefox provides recommendations on interesting and important content through Directory Tiles.
+This includes both referrals to sponsored partner sites (clearly marked as “sponsored”) and content we considers important to our mission of advancing the public benefit of the Internet.
+{% else %}
 {{ _('New Firefox users are initially given a set of Directory Tiles as suggestions for sites that may be of interest to them.') }}
 {{ _('Instead of displaying a blank set of Tiles, Firefox shows content from Mozilla and some Mozilla partners.') }}
 {{ _('All partner content is marked as “sponsored” and users have complete control to edit or remove any Tile.') }}
+{% endif %}
 </p>
+
+{% if LANG in ['en-US'] %}
+
+<h3>Greater personalization of your Firefox experience</h3>
+
+<p>
+Part of choosing independent means you get to control what you see — and to remove what you don’t want to see.
+Your new tab page will reflect as much or as little of your browsing behavior as you choose.
+It can be unique to you, or it can be completely blank.
+It is easy to rearrange Tiles in your new tab page, and to keep or remove any individual Tile.
+</p>
+
+<h3>A voice for Mozilla</h3>
+
+<p>
+Some Tiles contain sponsored content, while others relate to the <a href="{{ url('mozorg.contribute') }}">Mozilla project</a>, our community and associated causes.
+We believe that these are beneficial for every Web user to know about to help advance our mission to promote openness, innovation and opportunity on the Web.
+</p>
+
+<h3>Easy to control</h3>
+
+<p>
+Tiles are easily pinned, moved around or removed using simple drag-and-drop and close interfaces.
+If you do not want to see any Tiles, you can deactivate them completely in two clicks through the new tab gear control.
+</p>
+
+{% endif %}
 
 <h3>{{ _('Respects your privacy') }}</h3>
 
 <p>
-{{ _('As with all Mozilla products, Tiles provide users with extensive control over their personal data.') }}
-{% if LANG in ['en-US'] %}{# Bug 1099159, The new copy is only for en-US at first #}
-{{ _('Mozilla respects your privacy and any data collected by Mozilla via Tiles will be done in accordance with our <a href="%s">Privacy Notice</a>.')|format(url('privacy.notices.firefox')) }}
-{{ _('Only aggregated data from Tiles is stored by Mozilla (e.g., we calculate the total number of views and clicks an individual Tile receives).') }}
-{{ _('This helps us deliver the most interesting and relevant content to our users.') }}
-{{ _('You can deactivate the Tiles feature by clicking on the gear icon on the top right corner of the new tab page, and selecting Classic to show just history tiles or blank mode.') }}
+{% if LANG in ['en-US'] %}
+Tiles are a part of our initiative to set new standards for Internet advertisers and content publishers in the collection and use of personal data.
+</p>
+<p>
+Mozilla respects your privacy and any data collection by Mozilla via Tiles will be done in accordance with our <a href="{{ url('privacy.notices.firefox') }}">Privacy Notice</a>.
+The data we collect is to help us deliver the most interesting and relevant content to our users.
+For more on what data Mozilla collects via Tiles, see below.
 {% else %}
+{{ _('As with all Mozilla products, Tiles provide users with extensive control over their personal data.') }}
 {{ _('Data collection is limited to the aggregate number of impressions, clicks and Tile placement.') }}
 {{ _('Nothing is ever personally identifiable. In other words, we don’t know who clicks on what.') }}
 {{ _('We just know the total number of views and clicks an individual Tile receives. This helps us deliver the most interesting and relevant content.') }}
@@ -113,12 +170,10 @@
   <div data-accordion-role="tabpanel">
     <p>
       {% if LANG in ['en-US'] %}
-      {% trans %}
-        Mozilla collects Tiles related data such as number of clicks, impressions and tile specific
-        data (e.g., position and size of grid) to help Mozilla determine how frequently the tile has
-        been seen or interacted with, as well as your IP address (collected by Firefox client side
-        only, quickly translated into a region code and then deleted).
-      {% endtrans %}
+        Mozilla collects Tiles related data such as number of clicks, impressions and Tile specific
+        data (e.g. position and size of grid) to help Mozilla determine how frequently the Tile has
+        been seen or interacted with, as well as your IP address (collected by Firefox, quickly
+        translated into a region code and then deleted).
       {% else %}
       {% trans %}
         Aggregate data from the New Tab page includes impressions, clicks and tile placement.
@@ -132,9 +187,13 @@
   <h3 data-accordion-role="tab">{{ _('What data is collected when I opt out?') }}</h3>
   <div data-accordion-role="tabpanel">
     <p>
+      {% if LANG in ['en-US'] %}
+        No data is collected when a user deactivates the Enhanced Tiles experience.
+      {% else %}
       {% trans %}
         No data is collected when a user chooses to opt out of the enhanced Tiles experience.
       {% endtrans %}
+      {% endif %}
     </p>
   </div>
 </section>
@@ -145,7 +204,13 @@
     <ul>
       {% if LANG in ['en-US'] %}
       <li><a href="https://support.mozilla.org/kb/how-do-tiles-work-firefox">
-        {{ _('How do Tiles work?') }}
+        Mozilla Support: How do Tiles work?
+      </a></li>
+      <li><a href="https://blog.mozilla.org/advancingcontent/">
+        Mozilla Content Services: Advancing Content blog
+      </a></li>
+      <li><a href="https://blog.mozilla.org/netpolicy/2014/11/13/designing-tiles-for-trust/">
+        Mozilla Policy: "Designing Tiles for Trust"
       </a></li>
       {% else %}
       <li><a href="https://blog.mozilla.org/futurereleases/2014/09/04/new-tab-page-experiments-in-firefox-beta/">
