Fix Bug 1131142 - Update Firefox Refresh SUMO article link on /firefox/new/

--- a/bedrock/firefox/templates/firefox/new.html
+++ b/bedrock/firefox/templates/firefox/new.html
@@ -53,7 +53,7 @@
       <div id="refresh-firefox-wrapper">
         <p>{{ _('Give Firefox a tune up') }}</p>
         <button type="button" id="refresh-firefox" class="button">{{ _('Refresh Firefox') }}</button>
-        <a href="https://support.mozilla.org/kb/reset-firefox-easily-fix-most-problems" rel="external">{{ _('Learn more') }}</a>
+        <a href="https://support.mozilla.org/kb/refresh-firefox-reset-add-ons-and-settings?utm_source=mozilla.org&amp;utm_medium=referral&amp;utm_campaign=learn-more-link" rel="external">{{ _('Learn more') }}</a>
       </div>
     {% endif %}
     </div>
