--- a/etc/cron.d/bedrock-prod.tmpl
+++ b/etc/cron.d/bedrock-prod.tmpl
@@ -7,7 +7,8 @@ MAILTO="webops-cron@mozilla.com,cron-bedrock@mozilla.com"
 */10 * * * * root /data/bedrock/src/update-www.mozilla.org.sh
 
 */5  * * * * {{ django_manage }} rnasync > /dev/null 2>&1
-*/15 * * * * {{ user }} /data/bedrock/src/update-www.mozilla.org-cron-svn-locale.sh &> /dev/null
+# TODO Make this script only sync locales
+# */15 * * * * {{ user }} /data/bedrock/src/update-www.mozilla.org-cron-svn-locale.sh &> /dev/null
 # outputs when the run completed to http://www.mozilla.org/media/locale_finished.txt
 
 # disabled per bug 1042074
