Fix missing image referenced in thunderbird base template.

--- a/bedrock/thunderbird/templates/thunderbird/base-resp.html
+++ b/bedrock/thunderbird/templates/thunderbird/base-resp.html
@@ -4,7 +4,7 @@
 
 {% extends "base-resp.html" %}
 
-{% block page_image %}{{ static('img/thunderbird/thunderbird-256.jpg') }}{% endblock %}
+{% block page_image %}{{ static('img/thunderbird/thunderbird-256.png') }}{% endblock %}
 {% block page_favicon %}{{ static('img/thunderbird/favicon.ico') }}{% endblock %}
 {% block page_favicon_large %}{{ static('img/thunderbird/favicon-196.png') }}{% endblock %}
 {% block page_ios_icon %}{{ static('img/thunderbird/ios-icon-180.png') }}{% endblock %}
