--- a/bedrock/gigabit/templates/gigabit/apply.html
+++ b/bedrock/gigabit/templates/gigabit/apply.html
@@ -8,8 +8,7 @@
 {% block page_desc %}{{_('Gigabit - Description.')}}{% endblock %}
 {% block body_id %}apply{% endblock %}
 {% block body_class %}sand gigabit{% endblock %}
-{% block page_image %}{{ static('img/gigabit/gigabit-wordmark.png') }}?2013-11{% endblock %}
-{% block page_favicon %}{{ static('img/gigabit/favicon.png') }}?2013-11{% endblock %}
+{% block page_image %}{{ static('img/gigabit/gigabit-wordmark.png') }}{% endblock %}
 {% block site_header_logo %}
 {% endblock %}
 
