Remove remaining date-based cache busting query params.

--- a/bedrock/firefox/templates/firefox/os/index.html
+++ b/bedrock/firefox/templates/firefox/os/index.html
@@ -271,7 +271,7 @@
           <h2>{{_('Moments with friends')}}</h2>
           <p>{{_('Import your contacts directly from Facebook and share updates instantly.')}}</p>
         </div>
-        <img class="app center" id="contacts-app" src="{{ l10n_img('firefox/os/have-it-all/contacts.jpg') }}?2013-09" alt="{{_('Contacts app')}}">
+        <img class="app center" id="contacts-app" src="{{ l10n_img('firefox/os/have-it-all/contacts.jpg') }}" alt="{{_('Contacts app')}}">
         <div class="content right">
           <ul class="icon-list">
             <li class="icon contacts"></li>
@@ -308,7 +308,7 @@
             <li class="icon videos"></li>
           </ul>
         </div>
-        <img class="app left" id="music-app" src="{{ l10n_img('firefox/os/have-it-all/music.jpg') }}?2013-09" alt="{{_('Music app')}}">
+        <img class="app left" id="music-app" src="{{ l10n_img('firefox/os/have-it-all/music.jpg') }}" alt="{{_('Music app')}}">
         <img class="app center" id="radio-app" src="{{ l10n_img('firefox/os/have-it-all/radio.jpg') }}" alt="{{_('Radio app')}}">
       </section>
     </div>
@@ -335,8 +335,8 @@
         </div>
 
         <div class="app right app-image-wrapper" id="maps-app">
-          <img id="maps-app-india" src="{{ l10n_img('firefox/os/have-it-all/dualsim.png') }}?2013-09" alt="{{_('Dual SIM')}}" class="india-show{% if request.locale not in ['hi-IN', 'ta'] %} hidden{% endif %}">
-          <img id="maps-app-non-india" src="{{ l10n_img('firefox/os/have-it-all/maps.jpg') }}?2013-09" alt="{{_('Maps app')}}" class="india-hide{% if request.locale in ['hi-IN', 'ta'] %} hidden{% endif %}">
+          <img id="maps-app-india" src="{{ l10n_img('firefox/os/have-it-all/dualsim.png') }}" alt="{{_('Dual SIM')}}" class="india-show{% if request.locale not in ['hi-IN', 'ta'] %} hidden{% endif %}">
+          <img id="maps-app-non-india" src="{{ l10n_img('firefox/os/have-it-all/maps.jpg') }}" alt="{{_('Maps app')}}" class="india-hide{% if request.locale in ['hi-IN', 'ta'] %} hidden{% endif %}">
         </div>
       </section>
     </div>
@@ -352,7 +352,7 @@
           </ul>
         </div>
         <img class="app center" id="messages-app" src="{{ l10n_img('firefox/os/have-it-all/messages.jpg') }}" alt="{{_('Messages app')}}">
-        <img class="app right" id="mail-app" src="{{ l10n_img('firefox/os/have-it-all/mail.jpg') }}?2013-09" alt="{{_('Email app')}}">
+        <img class="app right" id="mail-app" src="{{ l10n_img('firefox/os/have-it-all/mail.jpg') }}" alt="{{_('Email app')}}">
       </section>
     </div>
 
@@ -365,7 +365,7 @@
             <li class="icon marketplace"></li>
           </ul>
         </div>
-        <img class="app left" id="marketplace-app" src="{{ l10n_img('firefox/os/have-it-all/marketplace.jpg') }}?2014-08" alt="{{_('Marketplace app')}}">
+        <img class="app left" id="marketplace-app" src="{{ l10n_img('firefox/os/have-it-all/marketplace.jpg') }}" alt="{{_('Marketplace app')}}">
       </section>
     </div>
 
