--- a/bedrock/firefox/templates/firefox/partners/index.html
+++ b/bedrock/firefox/templates/firefox/partners/index.html
@@ -7,7 +7,7 @@
 {% block page_title %}{{ _('Firefox OS, Marketplace, Android — Partners') }}{% endblock %}
 {% block page_desc %}{{ _('We’re enabling operators, phone manufacturers and developers to manage, customize and improve relationships with their customers directly through our mobile products: <a %(url1)s>Firefox OS</a>, <a %(url2)s>Firefox Marketplace</a> and <a %(url3)s>Firefox for Android</a>.') }}{% endblock %}
 {% block page_image %}{{ static('img/firefox/firefox-256.jpg') }}{% endblock %}
-{% block page_favicon %}{{ static('img/firefox/favicon.ico?2013-08') }}{% endblock %}
+{% block page_favicon %}{{ static('img/firefox/favicon.ico') }}{% endblock %}
 {% block page_favicon_large %}{{ static('img/firefox/favicon-196.png') }}{% endblock %}
 {% block page_ios_icon %}{{ static('img/firefox/ios-icon-180.png') }}{% endblock %}
 
