--- a/bedrock/firefox/templates/firefox/base.html
+++ b/bedrock/firefox/templates/firefox/base.html
@@ -8,7 +8,7 @@
 
 {% block page_title_prefix %}{{ _('Mozilla Firefox Web Browser') }} — {% endblock %}
 {% block page_image %}{{ static('img/firefox/firefox-256.jpg') }}{% endblock %}
-{% block page_favicon %}{{ static('img/firefox/favicon.ico?2013-08') }}{% endblock %}
+{% block page_favicon %}{{ static('img/firefox/favicon.ico') }}{% endblock %}
 {% block page_favicon_large %}{{ static('img/firefox/favicon-196.png') }}{% endblock %}
 {% block page_ios_icon %}{{ static('img/firefox/ios-icon-180.png') }}{% endblock %}
 
