Fix bug 1132454: Update platform_img helper for new static files.

--- a/bedrock/firefox/templates/firefox/new.html
+++ b/bedrock/firefox/templates/firefox/new.html
@@ -137,7 +137,7 @@
         </div>
 
         <div class="desktop" id="firefox-screenshot">
-          {{ platform_img('img/firefox/new/browser.png', {'alt': _('Firefox screenshot'), 'data-additional-platforms': 'android ios', 'high-res': True}) }}
+          {{ platform_img('img/firefox/new/browser.png', {'alt': _('Firefox screenshot'), 'high-res': True}) }}
         </div>
 
         <div id="newsletter-latest">
