--- a/media/css/firefox/all.less
+++ b/media/css/firefox/all.less
@@ -115,7 +115,7 @@
             &.linux64 a {
                 background-position: -900px 50%
             }
-            &.mac a {
+            &.osx a {
                 background-position: -1200px 50%
             }
         }
