--- a/media/css/sandstone/buttons.less
+++ b/media/css/sandstone/buttons.less
@@ -365,12 +365,12 @@
 }
 
 .download-button-beta.download-button-small .download-link .download-lang,
-.download-button-aurora.download-button-small .download-link .download-lang {
+.download-button-alpha.download-button-small .download-link .download-lang {
     top: 33px;
 }
 
 .download-button-beta,
-.download-button-aurora {
+.download-button-alpha {
     .download-link .download-title,
     .download-link .download-title span {
         .font-size(24px);
@@ -378,14 +378,14 @@
 }
 
 .download-button-beta.download-button-small,
-.download-button-aurora.download-button-small {
+.download-button-alpha.download-button-small {
     .download-link .download-title,
     .download-link .download-title span {
         .font-size(20px);
     }
 }
 
-.download-button-aurora.download-button-small {
+.download-button-alpha.download-button-small {
     .download-link {
         .download-title {
             .font-size(13px);
@@ -407,7 +407,7 @@
     }
 }
 
-.download-button-aurora.download-button-simple {
+.download-button-alpha.download-button-simple {
     .download-link .download-subtitle {
         // Don't hide the subtitle for Aurora if simple=True
         display: block;
@@ -415,9 +415,9 @@
 }
 
 .download-button.download-button-beta.download-button-small .download-list .os_android,
-.download-button.download-button-aurora.download-button-small .download-list .os_android,
-.download-button.download-button-mobile.download-button-aurora.download-button-small,
-.download-button.download-button-mobile.download-button-beta.download-button-small {
+.download-button.download-button-alpha.download-button-small .download-list .os_android,
+.download-button.download-button-android.download-button-alpha.download-button-small,
+.download-button.download-button-android.download-button-beta.download-button-small {
     .download-link .download-title span {
         .font-size(18px);
         letter-spacing: -0.01em;
@@ -432,11 +432,11 @@
   background-image: url(/media/img/sandstone/buttons/beta-small.png);
 }
 
-.download-button-large.aurora .download-link .download-content {
+.download-button-large.alpha .download-link .download-content {
   background-image: url(/media/img/sandstone/buttons/aurora-large.png);
 }
 
-.download-button-small.aurora .download-link .download-content {
+.download-button-small.alpha .download-link .download-content {
   background-image: url(/media/img/sandstone/buttons/aurora-small.png);
 }
 
@@ -457,7 +457,7 @@
 }
 
 .download-button-noicon .download-list .os_android,
-.download-button-mobile.download-button-noicon {
+.download-button-android.download-button-noicon {
     .download-link .download-title span {
         padding-top: 7px;
     }
@@ -473,7 +473,7 @@
 }
 
 .download-button-small.download-button-noicon .download-list .os_android,
-.download-button-small.download-button-mobile.download-button-noicon {
+.download-button-small.download-button-android.download-button-noicon {
     .download-link .download-title span {
         padding-top: 0;
     }
@@ -535,10 +535,10 @@
 
 .download-button .os_linux,
 .download-button .os_linux64,
-.windows.arm .download-button .os_windows,
+.windows.arm .download-button .os_win,
 .linux.arm .download-button .os_linux,
 .linux.x86.x64 .download-list .os_linux,
-.download-button .os_windows,
+.download-button .os_win,
 .download-button .os_osx,
 .download-button .os_android,
 .no-js .download-list,
@@ -548,15 +548,15 @@
 
 .linux .download-button .os_linux,
 .linux.x86.x64 .download-button .os_linux64,
-.windows .download-button .os_windows,
+.windows .download-button .os_win,
 .osx .download-button .os_osx,
 .android .download-button .os_android,
-.download-button-mobile .os_android,
+.download-button-android .os_android,
 .android .download-button-desktop .download-list,
-.android .download-button-desktop small.os_windows,
-.no-js .download-button-mobile .download-list,
-.other .download-button-mobile .download-list,
-.other .download-button small.os_windows {
+.android .download-button-desktop small.os_win,
+.no-js .download-button-android .download-list,
+.other .download-button-android .download-list,
+.other .download-button small.os_win {
     display: block !important;
 }
 
@@ -572,7 +572,7 @@
 // Small print
 
 .download-button small.download-other,
-.other .download-button-mobile small.download-other,
+.other .download-button-android small.download-other,
 .android .download-button-desktop small.download-other {
     .open-sans;
     display: block;
@@ -627,7 +627,7 @@
 // Mobile download buttons
 
 .download-button .download-list .os_android,
-.download-button-mobile {
+.download-button-android {
     .download-link {
        .download-title {
             padding-top: 0;
@@ -651,7 +651,7 @@
 }
 
 .download-button.download-button-small .download-list .os_android,
-.download-button.download-button-small.download-button-mobile {
+.download-button.download-button-small.download-button-android {
     .download-link {
        .download-title {
             padding-top: 0;
@@ -706,7 +706,7 @@ html[lang="es-ES"],
 html[lang="es-MX"],
 html[lang="pt-BR"],
 html[lang="pt-PT"] {
-    .download-button-aurora.download-button-small .download-link .download-lang,
+    .download-button-alpha.download-button-small .download-link .download-lang,
     .download-button-beta.download-button-small .download-link .download-lang {
         top: 30px;
     }
@@ -714,7 +714,7 @@ html[lang="pt-PT"] {
 
 html[lang="gd"],
 html[lang="mk"] {
-    .download-button-aurora.download-button-small .download-link,
+    .download-button-alpha.download-button-small .download-link,
     .download-button-beta.download-button-small .download-link {
         .download-subtitle {
             padding-right: 50px;
@@ -722,7 +722,7 @@ html[lang="mk"] {
     }
 
     .download-button.download-button-small .download-list .os_android,
-    .download-button.download-button-small.download-button-mobile {
+    .download-button.download-button-small.download-button-android {
         .download-subtitle {
             padding-right: 0;
         }
@@ -754,7 +754,7 @@ html[lang="ml"],
 html[lang="ms"],
 html[lang="ta"],
 html[lang="te"] {
-    .download-button.download-button-beta.download-button-mobile.download-button-small,
+    .download-button.download-button-beta.download-button-android.download-button-small,
     .download-button.download-button-small .download-list .os_android {
         .download-subtitle {
             width: auto;
