--- a/bedrock/mozorg/templates/mozorg/home/home-new.html
+++ b/bedrock/mozorg/templates/mozorg/home/home-new.html
@@ -86,7 +86,7 @@
 {% block content %}
 <main role="main">
   <header class="main-header">
-    <div style="text-align: center;" class='mozillaLogo'>
+    <div style="text-align: center; width: 200px; margin: 0 auto;" class='mozillaLogo'>
       <img width="200" height="200" src="{{ media('img/styleguide/identity/mozilla/logo/staticLogo.png') }}" alt="Mozilla">
     </div>
   </header>
