Add some margins to cta area in hero space

--- a/media/css/firefox/os/firefox-os-new.less
+++ b/media/css/firefox/os/firefox-os-new.less
@@ -202,8 +202,9 @@ main {
     }
 }
 .fxos-cta {
-    @media only screen and (max-width: 1024px) {
-        margin-top: 10px;
+    margin: 10px;
+    @media only screen and (max-width: @breakMobileLandscape) {
+        margin: 5px;
     }
 }
 .phone-container {
